@@ -6,6 +6,8 @@ class Profiles::AvatarsController < ApplicationController
     @user.remove_avatar!
 
     @user.save
+    @user.reset_events_cache
+
     redirect_to profile_path
   end
 end
