@@ -9,6 +9,7 @@ v 6.4.0
   - Allow removal of avatar (Drew Blessing)
   - Project web hooks now support issues and merge request events
   - Visiting project page while not logged in will redirect to sign-in instead of 404 (Jason Hollingsworth)
+  - Expire event cache on avatar creation/removal (Drew Blessing)
 
 v 6.3.0
   - API for adding gitlab-ci service
